--- a/app/src/main/res/layout/ticket.xml
+++ b/app/src/main/res/layout/ticket.xml
@@ -164,13 +164,14 @@
                 android:id="@+id/status"/>-->
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:id="@+id/status"
                 android:layout_marginRight="10dp"
+                android:src="@drawable/logo_pending"
                 />
         </RelativeLayout>
 
