--- a/app/src/main/res/layout/attendees.xml
+++ b/app/src/main/res/layout/attendees.xml
@@ -93,7 +93,7 @@
             />
         </RelativeLayout>
 
-        <RelativeLayout
+        <!--<RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/numlay"
@@ -119,7 +119,7 @@
             android:layout_alignBottom="@+id/numticketsicon"
             android:id="@+id/attnumtickets"/>
 
-            </RelativeLayout>
+            </RelativeLayout>-->
 
     </RelativeLayout>
     </android.support.v7.widget.CardView>
